--- a/api-reference/cli/using-cli.mdx
+++ b/api-reference/cli/using-cli.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'CLI Guide'
-description: 'Getting started with the WaveAssist Command Line Interface'
+title: "CLI Guide"
+description: "Getting started with the WaveAssist Command Line Interface"
 ---
 
 # WaveAssist CLI
 
-WaveAssist provides a command-line interface (CLI) for managing your projects and workflows directly from your terminal.
+WaveAssist provides a command-line interface (CLI) for managing your projects and AI assistants directly from your terminal.
 
 ## Installation
 
@@ -17,23 +17,25 @@ pip install waveassist
 
 ## Available Commands
 
-| Command | Description |
-|---------|-------------|
-| `waveassist login` | Authenticate via browser and store token |
-| `waveassist push` | Push local Python code to WaveAssist |
-| `waveassist pull` | Pull Python code from WaveAssist |
-| `waveassist version` | Show CLI version information |
+| Command              | Description                              |
+| -------------------- | ---------------------------------------- |
+| `waveassist login`   | Authenticate via browser and store token |
+| `waveassist push`    | Push local Python code to WaveAssist     |
+| `waveassist pull`    | Pull Python code from WaveAssist         |
+| `waveassist version` | Show CLI version information             |
 
 ## Getting Started
 
 1. First, authenticate using:
+
    ```bash
    waveassist login
    ```
 
-2. You can then use other commands like `push` and `pull` to manage your project code.
+2. You can then use other commands like `push` and `pull` to manage your AI assistant code.
 
 For detailed information about each command, refer to the individual command references:
+
 - [login](/api-reference/cli/login)
 - [push](/api-reference/cli/push)
 - [pull](/api-reference/cli/pull)
