--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'API Reference'
-description: 'Complete reference for the WaveAssist API'
+title: "API Reference"
+description: "Complete reference for the WaveAssist API"
 ---
 
 # WaveAssist API
@@ -14,33 +14,38 @@ All API requests require authentication using your project key. You can obtain y
 ## Core Features
 
 ### Project Management
+
 - Create and manage projects via `/manage/create_project` and `/manage/fetch_all_projects`
 - Handle project variables with `/manage/fetch_project_variables`
 - Manage environments using `/manage/fetch_environments`
 
 ### Node Operations
+
 - Create, update, and delete nodes using `/manage/create_node`, `/manage/update_node`, and `/manage/delete_node`
 - Manage node configurations and code via `/manage/update_code`
 - View node status with `/manage/fetch_nodes`
 
 ### Data Management
+
 - Upload and download data files using `/data/upload_data_file` and `/data/download_data_file`
 - Get and set data for specific keys via `/data/fetch_data_for_key` and `/data/set_data_for_key`
 - Handle integration data with `/data/get_integration_data`
 
 ### Deployment & Debug
+
 - Deploy and stop projects using `/deploy/deploy_project` and `/deploy/stop_deployment`
 - Run DAGs and generate visualizations via `/deploy/run_dag` and `/deploy/generate_dag_image`
 - Access logs and manage packages through `/debug/fetch_logs` and related endpoints
 
 ## Python SDK
+
 For Python users, we recommend using our official Python package:
 
 ```bash
 pip install waveassist
 ```
 
-This provides a convenient interface to interact with WaveAssist's API and manage your project variables. Example usage:
+This provides a convenient interface to interact with WaveAssist's API and manage your AI assistant variables. Example usage:
 
 ```python
 from waveassist import WaveAssist
@@ -63,4 +68,5 @@ logs = wa.get_logs('node_key')
 ```
 
 ## Base URL
+
 All API endpoints are relative to: `https://api.waveassist.io`
