--- a/api-reference/sdk/initialization.mdx
+++ b/api-reference/sdk/initialization.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Initialization'
-description: 'How to initialize the WaveAssist SDK'
+title: "Initialization"
+description: "How to initialize the WaveAssist SDK"
 ---
 
 # SDK Initialization
@@ -40,10 +40,8 @@ waveassist.init(
 
 ## Configuration Parameters
 
-| Parameter | Type | Required | Description |
-|-----------|------|----------|-------------|
-| token | string | Yes | Your API token for authentication |
-| project_key | string | Yes | Your project identifier |
-| environment_key | string | No | Environment to use (defaults to project_key_default) |
-
-
+| Parameter       | Type   | Required | Description                                          |
+| --------------- | ------ | -------- | ---------------------------------------------------- |
+| token           | string | Yes      | Your API token for authentication                    |
+| project_key     | string | Yes      | Your AI assistant project identifier                 |
+| environment_key | string | No       | Environment to use (defaults to project_key_default) |
