--- a/api-reference/sdk/store-data.mdx
+++ b/api-reference/sdk/store-data.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Store Data'
-description: 'How to store data using the WaveAssist SDK'
+title: "Store Data"
+description: "How to store data using the WaveAssist SDK"
 ---
 
-Learn how to **store different types of data** using the WaveAssist SDK.
+Learn how to **store different types of data** using the WaveAssist SDK for your AI assistants.
 
 ## Basic Usage
 
@@ -36,10 +36,8 @@ waveassist.store_data("user_scores", df)
 
 ## Function Parameters
 
-| Parameter | Type | Required | Description |
-|-----------|------|----------|-------------|
-| key | string | Yes | Unique identifier for the data |
-| value | any | Yes | Data to store (string, number, dict, DataFrame) |
-| environment | string | No | Override default environment |
-
-
+| Parameter   | Type   | Required | Description                                     |
+| ----------- | ------ | -------- | ----------------------------------------------- |
+| key         | string | Yes      | Unique identifier for the data                  |
+| value       | any    | Yes      | Data to store (string, number, dict, DataFrame) |
+| environment | string | No       | Override default environment                    |
