--- a/core-concepts/assistants.mdx
+++ b/core-concepts/assistants.mdx
@@ -1,42 +1,48 @@
 ---
-title: 'Assistants'
-description: 'Learn how to use WaveAssist assistants to quickly deploy production-ready workflows'
+title: "Assistants"
+description: "Learn how to use WaveAssist assistants to quickly deploy customizable AI assistants"
 ---
 
-**Assistants** in WaveAssist allow you to quickly deploy production-ready workflows and AI apps with a single click. They serve as pre-configured starting points for your projects, saving you time and ensuring best practices are followed. 
+**Assistants** in WaveAssist allow you to quickly deploy customizable AI assistants with a single click. They serve as pre-configured starting points for your AI automation projects, saving you time and ensuring best practices are followed.
 
 Check out our [Assistants](https://waveassist.io/assistants) for more information.
 
 ## What are Assistants?
 
-Assistants are production-ready configurations that include:
-- Pre-configured workflows
-- Optimized settings
+Assistants are production-ready AI configurations that include:
+
+- Pre-configured AI workflows
+- Optimized settings for specific use cases
 - Best practice implementations
-- Ready-to-use integrations
+- Ready-to-use AI integrations
 
 ## Using Assistants
 
 1. Navigate to the Assistants section in your WaveAssist dashboard
-2. Browse available assistants
+2. Browse available AI assistants
 3. Select an assistant that matches your needs
 4. Click "Deploy with WaveAssist" to create a new project based on the assistant
-5. Customize the configuration as needed
+5. Customize the AI configuration as needed
 
-## Few Examples of Assistants
+## Examples of AI Assistants
 
-WaveAssist offers several assistants for different use cases:
+WaveAssist offers several AI assistants for different use cases:
 
-- **GitZoid**: Git repository analysis and automation 
+- **WavePredict**: AI-powered stock analysis and predictions
+- **BrandRadar**: Brand monitoring and sentiment analysis across social media
+- **LeadPulse**: AI-driven lead generation and CRM alerts
+- **GitZoid**: Git repository analysis and automation
 - **BrandTrace**: Brand monitoring and analytics
 - **Fintrek**: Financial data processing and analysis
 
-## Customizing Assistants
+## Customizing AI Assistants
 
 After deploying an assistant, you can:
-- Modify workflow configurations
+
+- Modify AI workflow configurations
 - Add or remove nodes
 - Update environment variables
-- Customize integrations
+- Customize AI integrations
+- Tweak Python nodes for personalized AI logic
 
-Start using assistants today! [Check out our assistants](https://waveassist.io/assistants).
+Start using AI assistants today! [Check out our assistants](https://waveassist.io/assistants).
