--- a/core-concepts/deployments.mdx
+++ b/core-concepts/deployments.mdx
@@ -3,9 +3,10 @@ title: "Deployments"
 description: "Learn about managing deployments in WaveAssist."
 ---
 
-**Deployments** allow you to run your workflows and nodes in a live environment. You can start, stop, and monitor deployments directly from the dashboard.
+**Deployments** allow you to run your AI assistants and nodes in a live environment. You can start, stop, and monitor deployments directly from the dashboard.
 
 ### Key Features
-- **Start Deployments**: Launch your workflows.
-- **Stop Deployments**: Halt running workflows.
+
+- **Start Deployments**: Launch your AI assistants.
+- **Stop Deployments**: Halt running AI assistants.
 - **Monitor Deployments**: View logs and status of deployments.
