--- a/core-concepts/environments.mdx
+++ b/core-concepts/environments.mdx
@@ -3,10 +3,10 @@ title: "Environments"
 description: "Learn about managing environments in WaveAssist."
 ---
 
-
-**Environments** allow you to manage different configurations for your projects, such as development, staging, and production.
+**Environments** allow you to manage different configurations for your AI assistants, such as development, staging, and production.
 
 ### Key Features
+
 - **Create Environments**: Add new environments.
 - **Edit Environments**: Update existing environments.
 - **Delete Environments**: Remove environments that are no longer needed.
