--- a/core-concepts/logs.mdx
+++ b/core-concepts/logs.mdx
@@ -3,30 +3,30 @@ title: "Logs"
 description: "Learn about viewing logs in WaveAssist."
 ---
 
-**Logs** provide detailed information about the execution of your workflows and nodes. Use logs to debug issues and monitor performance.
+**Logs** provide detailed information about the execution of your AI assistants and nodes. Use logs to debug issues and monitor performance.
 
 ## Key Features
 
-- **View Logs**: Inspect logs for specific nodes or workflows.
+- **View Logs**: Inspect logs for specific nodes or AI assistants.
 - **Export Logs**: Download logs for offline analysis.
 - **Node-Specific Logs**: Fetch logs for individual nodes using the dropdown menu.
 
 ## Viewing Logs
 
-The **Logs** section in WaveAssist allows you to view detailed execution logs for your workflows and nodes. Logs are displayed in a chronological order, making it easy to trace the execution flow.
+The **Logs** section in WaveAssist allows you to view detailed execution logs for your AI assistants and nodes. Logs are displayed in a chronological order, making it easy to trace the execution flow.
 
 ### Node-Specific Logs
 
 You can fetch logs for a specific node by selecting it from the **Node Dropdown** at the top of the logs page:
 
-- **All Nodes**: View logs for all nodes in your workflow.
+- **All Nodes**: View logs for all nodes in your AI assistant.
 - **Specific Node**: Select a node from the dropdown to filter logs for that particular node.
 
 This feature is useful for debugging issues related to a specific node or monitoring its performance.
 
 ### Example Log Entries
 
-Here’s an example of log entries you might see:
+Here's an example of log entries you might see:
 
 ```
 2025-04-11 10:05:02,084 - Completed Node: node_send_emails
