--- a/core-concepts/packages.mdx
+++ b/core-concepts/packages.mdx
@@ -3,10 +3,10 @@ title: "Packages"
 description: "Learn about managing packages in WaveAssist."
 ---
 
-
-**Packages** allow you to manage dependencies for your project. You can add, update, or remove packages as needed.
+**Packages** allow you to manage dependencies for your AI assistant. You can add, update, or remove packages as needed.
 
 ### Key Features
-- **Add Packages**: Install new packages for your project.
+
+- **Add Packages**: Install new packages for your AI assistant.
 - **Update Packages**: Keep your packages up-to-date.
 - **Remove Packages**: Uninstall packages that are no longer needed.
