--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,66 +1,67 @@
 ---
 title: Getting Started
-description: "Understand what WaveAssist is and how it can help you automate workflows with ease."
+description: "Understand what WaveAssist is and how it can help you deploy customizable AI assistants with ease."
 ---
 
 # Welcome to WaveAssist
 
-WaveAssist helps you create, run, and automate Python-based workflows — whether it's AI-driven tasks, backend logic, data pipelines, or automations.
+WaveAssist empowers you to deploy customizable AI assistants — whether it's finance-focused automation, brand monitoring, lead generation, or any AI-driven task that requires intelligent automation.
 
 ### What Can You Build?
 
-- Automate daily tasks like sending emails or reports
-- Build bots that connect to GitHub, Notion or Slack
-- Use AI to summarize, generate, or process content
-- Run periodic background logic with zero infra hassle
+- Deploy pre-built AI assistants like WavePredict for stock analysis
+- Create custom assistants for brand monitoring and sentiment analysis
+- Build intelligent automation for lead generation and CRM alerts
+- Run AI-powered workflows with zero infrastructure hassle
 
 ---
 
 ## Benefits for Developers
 
-WaveAssist is built for modern builders who want to automate workflows without worrying about infrastructure.
+WaveAssist is built for modern builders who want to deploy AI assistants without worrying about infrastructure.
 
 ### Benefits:
 
-- Write simple Python functions as modular nodes
-- Easily connect logic in sequence or parallel
+- Deploy pre-built assistants with one click
+- Customize assistants using simple Python functions as modular nodes
+- Easily connect AI logic in sequence or parallel
 - Test and debug directly from the dashboard
 - Scale up with variables, triggers, and environments
 - Integrate with APIs, CRON jobs, webhooks, or LLMs
 
-Whether you're a solo hacker or an engineering team — WaveAssist adapts to your style of building.
+Whether you're a solo hacker or an engineering team — WaveAssist adapts to your style of building AI assistants.
 
 ## How to get started?
 
-Head over to the [Quickstart Guide](./quickstart) to build your first project in minutes using our Fortune Generator example!
+Head over to the [Quickstart Guide](./quickstart) to deploy your first AI assistant in minutes using our Fortune Generator example!
 
 <Card title="Quick Start" icon="rocket" href="./quickstart">
-	Start your journey by building a simple pipeline with WaveAssist
+	Start your journey by deploying a simple AI assistant with WaveAssist
 </Card>
 
 ## WaveAssist Core Concepts Reference
 
 <CardGroup cols={3}>
 	<Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
-		Python scripts that represent tasks
+		Python scripts that represent tasks in your AI assistant
 	</Card>
 	<Card title="Variables" icon="database" href="./core-concepts/data">
-		Manage variables and data securely across workflows
+		Manage variables and data securely across AI assistants
 	</Card>
 	<Card title="Packages" icon="box" href="./core-concepts/packages">
-		Add and manage dependencies for your workflows
+		Add and manage dependencies for your AI assistants
 	</Card>
 	<Card title="Environments" icon="cubes" href="./core-concepts/environments">
 		Configure and manage different runtime environments
 	</Card>
 	<Card title="Deployments" icon="cloud" href="./core-concepts/deployments">
-		Run and monitor workflows in live environments
+		Run and monitor AI assistants in live environments
 	</Card>
 	<Card title="Logs" icon="file-lines" href="./core-concepts/logs">
-		Debug and monitor workflows with detailed execution logs
+		Debug and monitor AI assistants with detailed execution logs
 	</Card>
 </CardGroup>
 
 <Card title="Quick Start" icon="rocket" href="./quickstart">
-	Start your journey by building a simple pipeline with WaveAssist
+	Start your journey by deploying a simple AI assistant with WaveAssist
 </Card>
