--- a/whats-next.mdx
+++ b/whats-next.mdx
@@ -1,12 +1,12 @@
 ---
 title: Next Steps
-description: Expand your Fortune of the Day project with advanced features and integrations
+description: Expand your Fortune of the Day AI assistant with advanced features and integrations
 ---
 
-# Next Steps: Expand Your Fortune of the Day Project
+# Next Steps: Expand Your Fortune of the Day AI Assistant
 
-You've built your first working workflow — congrats! 🎉  
-Now let’s explore how you can grow it into a full automation system.
+You've built your first working AI assistant — congrats! 🎉  
+Now let's explore how you can grow it into a full AI automation system.
 
 ---
 
@@ -45,8 +45,8 @@ print("Email sent successfully!")
 
 ## 2. Run and Re-Deploy
 
-1. Run your workflow by clickin on the play button of the first node and verify that you received the email successfully.
-2. Once confirmed, click **Deploy** to publish your updated workflow with version `0.0.2`.
+1. Run your AI assistant by clickin on the play button of the first node and verify that you received the email successfully.
+2. Once confirmed, click **Deploy** to publish your updated AI assistant with version `0.0.2`.
 
 That's it! You will now receive daily emails about your fortune from WaveAssist! 🎉
 
@@ -58,8 +58,8 @@ From this foundation, you can build:
 
 - A Slack bot to share fortunes with your team.
 - Use AI to generate new fortunes for you everyday.
-- A fortune-sharing web page using WaveAssist’s API.
+- A fortune-sharing web page using WaveAssist's API.
 - An SMS notifier to send fortunes via text.
 - A morale booster for your team with personalized messages.
 
-You can also use [Assistants](../core-concepts/assistants) for pre-configured production-ready workflows.
+You can also use [Assistants](../core-concepts/assistants) for pre-configured production-ready AI assistants.
