--- a/api-reference/endpoint/data-management.mdx
+++ b/api-reference/endpoint/data-management.mdx
@@ -1,41 +1,43 @@
 ---
-title: 'Data Management'
-description: 'API endpoints for managing data in WaveAssist'
+title: "Data Management"
+description: "API endpoints for managing data in WaveAssist AI assistants"
 ---
 
 # Data Management
 
-These endpoints allow you to manage data within your WaveAssist projects, including file uploads, downloads, and data key operations.
+These endpoints allow you to manage data within your WaveAssist AI assistant projects, including file uploads, downloads, and data key operations.
 
 ## Upload Data File
 
-Upload a file to your project.
+Upload a file to your AI assistant project.
 
 ```endpoint
 POST /data/upload_data_file
 ```
 
 ### Request Body
+
 ```json
 {
-  "project_key": "string",
-  "file": "binary"
+	"project_key": "string",
+	"file": "binary"
 }
 ```
 
 ## Download Data File
 
-Download a file from your project.
+Download a file from your AI assistant project.
 
 ```endpoint
 GET /data/download_data_file
 ```
 
 ### Query Parameters
+
 ```json
 {
-  "project_key": "string",
-  "file_key": "string"
+	"project_key": "string",
+	"file_key": "string"
 }
 ```
 
@@ -48,10 +50,11 @@ GET /data/fetch_data_for_key
 ```
 
 ### Query Parameters
+
 ```json
 {
-  "project_key": "string",
-  "data_key": "string"
+	"project_key": "string",
+	"data_key": "string"
 }
 ```
 
@@ -64,11 +67,12 @@ POST /data/set_data_for_key
 ```
 
 ### Request Body
+
 ```json
 {
-  "project_key": "string",
-  "data_key": "string",
-  "value": "any"
+	"project_key": "string",
+	"data_key": "string",
+	"value": "any"
 }
 ```
 
@@ -81,10 +85,11 @@ GET /data/get_integration_data
 ```
 
 ### Query Parameters
+
 ```json
 {
-  "project_key": "string",
-  "integration_key": "string"
+	"project_key": "string",
+	"integration_key": "string"
 }
 ```
 
